Fix sideways scroll
The body and header had to be set to 100% width instead of 100vw
to stop the horizontal scrolling.

The menu width was increased also so the menu items fit better,
no more word wrapping.

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 
 html,
 body {
-  width: 100vw;
+  width: 100%;
 }
 
 body {
@@ -20,16 +20,14 @@ body {
   font-family: 'Orbitron', sans-serif;
   background-color: #26C0A7;
   color: var(--wattsdown-blackish-green);
-  font-family: Helvetica, Arial, sans-serif;
 }
 
 header {
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
   background-color: var(--wattsdown-darker-green);
-  /*! border: solid; */
 }
 
 a {
@@ -59,7 +57,6 @@ a {
 
 #menu {
   margin: 0;
-  /*! width: 100%; */
   display: flex;
   padding-left: 0;
   list-style-type: none;
@@ -87,8 +84,7 @@ a {
   display: flex;
   align-items: center;
   flex-direction: column;
-  /*! border: solid; */
-                            /* color: #d5d1c5; <<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
+  /* color: #d5d1c5; <<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
   background-color: #ded8cc;
   background-image: url('../images/skulls.png');
   background-repeat: repeat;
@@ -111,7 +107,6 @@ a {
 
 .sub-banner {
   font-size: 2rem;
-  /*  font-family: 'Great Vibes', cursive; */
   font-family: 'PT Sans', sans-serif;
 }
 
@@ -127,6 +122,7 @@ input[type="submit"] {
   height: 55px;
   display: block;
   font-weight: bold;
+  font-size: 1.1rem;
   box-sizing: border-box;
 }
 
@@ -142,8 +138,6 @@ input[type="submit"] {
 }
 
 .features-container {
-  /*! padding: 2rem 0; */
-  /*! border: solid; */
   margin: 1rem 0;
 }
 
@@ -164,7 +158,6 @@ input[type="submit"] {
 
 .video-container {
   padding: 0;
-  /*! border: solid; */
 }
 
 #pricing {
@@ -174,7 +167,6 @@ input[type="submit"] {
   align-items: center;
   justify-content: center;
   flex-flow: column wrap;
-  /*! border: solid; */
 }
 
 .tile {
@@ -192,7 +184,6 @@ input[type="submit"] {
 
 .tile-title {
   margin: 0;
-  /* padding: 1em; */
   text-align: center;
   color: #e7f4f1;
   font-size: 1.5rem;
@@ -216,6 +207,7 @@ input[type="submit"] {
   color: hsl(114, 94%, 6%);
   align-items: center;
   justify-content: center;
+  font-family: Arial, sans-serif;
 }
 
 .price-currency {
@@ -239,7 +231,6 @@ footer {
   justify-content: center;
   color: var(--wattsdown-white);
   background-color: var(--wattsdown-charcol-dark);
-  /*! border: solid; */
 }
 
 .footer-menu {
@@ -252,7 +243,6 @@ footer {
 }
 
 .footer-list-item {
-  /* text-align: center; */
   padding: .5rem 1rem;
   font-weight: bold;
 }
@@ -275,20 +265,17 @@ footer a {
   text-align: center;
 }
 
-/* @media (min-width: 400px) {
-
-} */
-
 @media (min-width: 650px) {
   header {
     flex-direction: row;
     justify-content: space-between;
   }
   #menu {
+    margin-right: 1rem;
     flex-direction: row;
   }
   #nav-bar {
-    max-width: 300px;
+    max-width: 350px;
   }
   #menu li {
     margin-left: 2px;
